gym-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym
  template:
    metadata:
      labels:
        app: gym
    spec:
      containers:
      - name: devsearch
        image: nexusameer/gym:latest
        ports:
        - containerPort: 8002
