landingpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: nexusameer/my-landing-page:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
