portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio  # Label required to match Service
    spec:
      containers:
      - name: portfolio
        image: nexusameer/myportfolio:latest
        ports:
        - containerPort: 8001
