gym-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-service
spec:
  selector:
    app: gym
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
  type: ClusterIP
