myblog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog-service
spec:
  selector:
    app: myblog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
