studybud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studybud-service
spec:
  selector:
    app: studybud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8003
  type: ClusterIP
