techweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techweb-service
spec:
  selector:
    app: techweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8005
  type: ClusterIP
