ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devsearch.nexus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsearch-service
            port:
              number: 80
  - host: portfolio.nexus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
  - host: techweb.nexus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techweb-service
            port:
              number: 80
